@@ -6,7 +6,6 @@ import hudson.plugins.git.Branch;
 import hudson.plugins.git.GitException;
 import hudson.remoting.VirtualChannel;
 import hudson.util.StreamTaskListener;
-import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang.StringUtils;
 import org.eclipse.jgit.lib.ConfigConstants;
 import org.eclipse.jgit.lib.Constants;
@@ -21,6 +20,7 @@ import org.junit.runners.Parameterized;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -76,13 +76,13 @@ public class GitClientCloneTest {
     @BeforeClass
     public static void loadLocalMirror() throws Exception {
         /* Prime the local mirror cache before other tests run */
-        /* Allow 3-7 second delay before priming the cache */
+        /* Allow 3-8 second delay before priming the cache */
         /* Allow other tests a better chance to prime the cache */
-        /* 3-7 second delay is small compared to execution time of this test */
+        /* 3-8 second delay is small compared to execution time of this test */
         Random random = new Random();
-        Thread.sleep((3 + random.nextInt(5)) * 1000L); // Wait 3-7 seconds before priming the cache
+        Thread.sleep(3000L + random.nextInt(5000)); // Wait 3-8 seconds before priming the cache
         TaskListener mirrorListener = StreamTaskListener.fromStdout();
-        File tempDir = Files.createTempDirectory("PrimeCloneTest").toFile();
+        File tempDir = Files.createTempDirectory("PrimeGitClientCloneTest").toFile();
         WorkspaceWithRepo cache = new WorkspaceWithRepo(tempDir, "git", mirrorListener);
         cache.localMirror();
         Util.deleteRecursive(tempDir);
@@ -138,9 +138,8 @@ public class GitClientCloneTest {
         cmd.execute();
         testGitClient.checkout().ref("origin/master").branch("master").execute();
         final String SHA1 = "feedabeefabeadeddeedaccede";
-        GitException gitException = assertThrows(GitException.class, () -> {
-            testGitClient.checkout().ref(SHA1).branch("master").execute();
-        });
+        GitException gitException = assertThrows(GitException.class,
+                () -> testGitClient.checkout().ref(SHA1).branch("master").execute());
         assertThat(gitException.getMessage(), is("Could not checkout master with start point " + SHA1));
     }
 
@@ -168,15 +167,9 @@ public class GitClientCloneTest {
         check_remote_url(workspace, testGitClient, "origin");
         assertBranchesExist(testGitClient.getBranches(), "master");
         assertAlternatesFileNotFound();
-        /* JGit does not support shallow clone */
-        boolean hasShallowCloneSupport = testGitClient instanceof CliGitAPIImpl && workspace.cgit().isAtLeastVersion(1, 5, 0, 0);
-        assertThat("isShallow?", workspace.cgit().isShallowRepository(), is(hasShallowCloneSupport));
+        assertThat("isShallow?", workspace.cgit().isShallowRepository(), is(true));
         String shallow = ".git" + File.separator + "shallow";
-        if (hasShallowCloneSupport) {
-            assertThat(new File(testGitDir, shallow), is(anExistingFile()));
-        } else {
-            assertThat(new File(testGitDir, shallow), is(not(anExistingFile())));
-        }
+        assertThat(new File(testGitDir, shallow), is(anExistingFile()));
     }
 
     @Test
@@ -186,20 +179,14 @@ public class GitClientCloneTest {
         check_remote_url(workspace, testGitClient, "origin");
         assertBranchesExist(testGitClient.getBranches(), "master");
         assertAlternatesFileNotFound();
-        /* JGit does not support shallow clone */
-        boolean hasShallowCloneSupport = testGitClient instanceof CliGitAPIImpl && workspace.cgit().isAtLeastVersion(1, 5, 0, 0);
-        assertThat("isShallow?", workspace.cgit().isShallowRepository(), is(hasShallowCloneSupport));
+        assertThat("isShallow?", workspace.cgit().isShallowRepository(), is(true));
         String shallow = ".git" + File.separator + "shallow";
-        if (hasShallowCloneSupport) {
-            assertThat(new File(testGitDir, shallow), is(anExistingFile()));
-        } else {
-            assertThat(new File(testGitDir, shallow), is(not(anExistingFile())));
-        }
+        assertThat(new File(testGitDir, shallow), is(anExistingFile()));
     }
 
     @Test
     public void test_clone_shared() throws IOException, InterruptedException {
-        testGitClient.clone_().url(workspace.localMirror()).repositoryName("origin").shared(true).execute();
+        testGitClient.clone_().url(workspace.localMirror()).repositoryName("origin").shared(true).tags(true).execute();
         testGitClient.checkout().ref("origin/master").branch("master").execute();
         check_remote_url(workspace, testGitClient, "origin");
         assertBranchesExist(testGitClient.getBranches(), "master");
@@ -209,7 +196,7 @@ public class GitClientCloneTest {
 
     @Test
     public void test_clone_null_branch() throws IOException, InterruptedException {
-        testGitClient.clone_().url(workspace.localMirror()).repositoryName("origin").shared(true).execute();
+        testGitClient.clone_().url(workspace.localMirror()).repositoryName("origin").shared().tags(false).execute();
         testGitClient.checkout().ref("origin/master").branch(null).execute();
         check_remote_url(workspace, testGitClient, "origin");
         assertAlternateFilePointsToLocalMirror();
@@ -226,7 +213,7 @@ public class GitClientCloneTest {
     }
 
     @Test
-    public void test_clone_reference() throws Exception, IOException, InterruptedException {
+    public void test_clone_reference() throws Exception {
         testGitClient.clone_().url(workspace.localMirror()).repositoryName("origin").reference(workspace.localMirror()).execute();
         testGitClient.checkout().ref("origin/master").branch("master").execute();
         check_remote_url(workspace, testGitClient, "origin");
@@ -255,7 +242,7 @@ public class GitClientCloneTest {
         assertAlternatesFileExists();
         final String alternates = ".git" + File.separator + "objects" + File.separator + "info" + File.separator + "alternates";
         final String expectedContent = SRC_DIR.replace("\\", "/") + "/.git/objects";
-        final String actualContent = FileUtils.readFileToString(new File(testGitDir, alternates), "UTF-8");
+        final String actualContent = Files.readString(testGitDir.toPath().resolve(alternates), StandardCharsets.UTF_8);
         assertThat("Alternates file content", actualContent, is(expectedContent));
         final File alternatesDir = new File(actualContent);
         assertThat(alternatesDir, is(anExistingDirectory()));
@@ -323,6 +310,35 @@ public class GitClientCloneTest {
         assertThat("Origin URL after add", testGitClient.getRemoteUrl("origin"), is(workspace.localMirror()));
     }
 
+    @Test
+    public void test_clone_default_timeout_logging() throws Exception {
+        testGitClient.clone_().url(workspace.localMirror()).repositoryName("origin").execute();
+        assertTimeout(testGitClient, "fetch", CliGitAPIImpl.TIMEOUT);
+    }
+
+    @Test
+    public void test_clone_timeout_logging() throws Exception {
+        int largerTimeout = CliGitAPIImpl.TIMEOUT + 1 + random.nextInt(600);
+        testGitClient.clone_().url(workspace.localMirror()).timeout(largerTimeout).repositoryName("origin").execute();
+        assertTimeout(testGitClient, "fetch", largerTimeout);
+    }
+
+    @Test
+    public void test_max_timeout_logging() throws Exception {
+        int maxTimeout = JGitAPIImpl.MAX_TIMEOUT;
+        testGitClient.clone_().url(workspace.localMirror()).timeout(maxTimeout).repositoryName("origin").execute();
+        assertTimeout(testGitClient, "fetch", maxTimeout);
+    }
+
+    @Test
+    public void test_clone_huge_timeout_logging() throws Exception {
+        int hugeTimeout = JGitAPIImpl.MAX_TIMEOUT + 1 + random.nextInt(Integer.MAX_VALUE - 1 - JGitAPIImpl.MAX_TIMEOUT);
+        testGitClient.clone_().url(workspace.localMirror()).timeout(hugeTimeout).repositoryName("origin").execute();
+        /* Expect fallback value from JGit for this nonsense timeout value */
+        int expectedValue = gitImplName.startsWith("jgit") ? JGitAPIImpl.MAX_TIMEOUT : hugeTimeout;
+        assertTimeout(testGitClient, "fetch", expectedValue);
+    }
+
     private void assertAlternatesFileExists() {
         final String alternates = ".git" + File.separator + "objects" + File.separator + "info" + File.separator + "alternates";
         assertThat(new File(testGitDir, alternates), is(anExistingFile()));
@@ -351,7 +367,7 @@ public class GitClientCloneTest {
 
         assertThat(new File(testGitDir, alternates), is(anExistingFile()));
         final String expectedContent = workspace.localMirror().replace("\\", "/") + "/objects";
-        final String actualContent = FileUtils.readFileToString(new File(testGitDir, alternates), "UTF-8");
+        final String actualContent = Files.readString(testGitDir.toPath().resolve(alternates), StandardCharsets.UTF_8);
         assertThat("Alternates file content", actualContent, is(expectedContent));
         final File alternatesDir = new File(actualContent);
         assertThat(alternatesDir, is(anExistingDirectory()));
@@ -361,7 +377,7 @@ public class GitClientCloneTest {
         return branches.stream().map(Branch::getName).collect(toList());
     }
 
-    private void assertBranchesExist(Set<Branch> branches, String... names) throws InterruptedException {
+    private void assertBranchesExist(Set<Branch> branches, String... names) {
         Collection<String> branchNames = getBranchNames(branches);
         for (String name : names) {
             assertThat(branchNames, hasItem(name));
@@ -398,4 +414,33 @@ public class GitClientCloneTest {
         assertThat("Updated URL", remotes, containsString(workspace.localMirror()));
     }
 
+    private void assertLoggedMessage(GitClient gitClient, final String candidateSubstring, final String expectedValue, final boolean expectToFindMatch) {
+        List<String> messages = handler.getMessages();
+        List<String> candidateMessages = new ArrayList<>();
+        List<String> matchedMessages = new ArrayList<>();
+        final String messageRegEx = ".*\\b" + candidateSubstring + "\\b.*"; // the expected substring
+        final String timeoutRegEx = messageRegEx + expectedValue + "\\b.*"; // # timeout=<value>
+        for (String message : messages) {
+            if (message.matches(messageRegEx)) {
+                candidateMessages.add(message);
+            }
+            if (message.matches(timeoutRegEx)) {
+                matchedMessages.add(message);
+            }
+        }
+        assertThat("No messages logged", messages, is(not(empty())));
+        if (expectToFindMatch) {
+            assertThat("No messages matched substring '" + candidateSubstring + "'", candidateMessages, is(not(empty())));
+            assertThat("Messages matched substring '" + candidateSubstring + "', found: " + candidateMessages + "\nExpected " + expectedValue, matchedMessages, is(not(empty())));
+            assertThat("All candidate messages matched", matchedMessages, is(candidateMessages));
+        } else {
+            assertThat("Messages matched substring '" + candidateSubstring + "' unexpectedly", candidateMessages, is(empty()));
+        }
+    }
+
+    private void assertTimeout(GitClient gitClient, final String substring, int expectedTimeout) {
+        String implName = gitImplName.equals("git") ? "git" : "JGit";
+        String operationName = implName + " " + substring;
+        assertLoggedMessage(gitClient, operationName, " [#] timeout=" + expectedTimeout, true);
+    }
 }
